# talc

./: .gitignore  BENCHMARKS.md  BENCHMARKS_WASM.md  Cargo.toml  LICENSE.md  README.md  README_WASM.md  TODO  allocator_graphs.py  buckets.py  check.sh  graph_microbench.py  graph_random_actions.py  justfile  rustfmt.toml  seqs.py  test.sh  wasm-bench.sh  wasm-perf.sh  wasm-size.sh
.github/workflows/: ci.yml
benches/: Cargo.toml
benches/src/: heap_efficiency.rs  lib.rs  microbench.rs  random_actions.rs
benchmark_results/: heap_efficiency.csv  heap_exhaustion.csv  random_actions.csv  random_actions_multi.csv
benchmarks/: Cargo.toml  graph_microbench.py  graph_random_actions.py  microbench.rs  random_actions.rs
benchmarks/src/: microbench.rs  random_actions.rs
book/: book.toml
book/src/: SUMMARY.md
doctest/: Cargo.toml
doctest/src/: lib.rs
examples/: galloc_allocator_bench.rs  macrobench.rs  microbench.rs  random_actions.rs  simple_chunk_allocator_bench.rs  std_global_allocator.rs  std_local_allocator.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: allocator.rs  arenas.rs  backed.rs  fuzz_arena.rs  fuzz_bits.rs  fuzz_talc.rs  global_alloc.rs  heaps.rs  manual.rs
results/: heap-efficiency.csv  memory-efficiency.csv  microbench.csv  random-actions-multi.csv  random-actions-no-realloc.csv  random-actions-sys-multi.csv  random-actions-sys-no-realloc.csv  random-actions-sys.csv  random-actions.csv  wasm-perf.csv  wasm-size.csv
scripts/: check.sh  wasm-perf.sh  wasm-size.sh
src/: lib.rs  llist.rs  locking.rs  oom_handler.rs  ptr_utils.rs  span.rs  tag.rs  talc.rs  talck.rs  tallock.rs  utils.rs
src/talc/: counters.rs  llist.rs
stable_examples/: Cargo.toml
stable_examples/examples/: stable_allocator_api.rs  std_global_allocator.rs
std_examples/: Cargo.toml  std_allocator_api.rs
talc/: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  README_WASM.md
talc/examples/: allocator_api.rs  bucket_ranges.rs  global_allocator.rs  no_std_global_allocator.rs  std_global_allocator.rs  system.rs
talc/src/: arena.rs  cell.rs  ext.rs  lib.rs  locking.rs  node.rs  ptr_utils.rs  span.rs  talc.rs  talck.rs  test_utils.rs  wasm.rs
talc/src/allocators/: mod.rs  talck.rs  wasm32.rs
talc/src/base/: binning.rs  bitfield.rs  chunk.rs  counters.rs  mod.rs  tag.rs
talc/src/base/bitfield/: tzcnt.rs
talc/src/oom/: allocator_backed.rs  claim_on_oom.rs  mod.rs  os_backed.rs  vm_backed.rs
talc/src/oom/os_backed/: unix.rs  win.rs
talc/src/oom/vm_backed/: unix.rs  win.rs
talc/src/source/: allocator.rs  claim.rs  global_alloc.rs  mod.rs  vheaps.rs
talc/src/source/vheaps/: README.md  unix.rs  win.rs
talc/src/src/: allocator.rs  global_alloc.rs  mod.rs  rcdr.rs  span.rs
talc/src/src/rcdr/: unix.rs  win.rs
talc/src/sync/: mod.rs  unix.rs  win.rs
talc/src/talc/: alignment.rs  bitfield.rs  bucket_config.rs  counters.rs  llist.rs  mod.rs  node.rs  oom_handler.rs  tag.rs
talc/tests/: wasm_sources.rs
wasm-bench/: Cargo.toml  bench.js
wasm-bench/src/: lib.rs
wasm-example/: Cargo.toml
wasm-example/src/: lib.rs
wasm-perf/: Cargo.toml  bench.js
wasm-perf/src/: lib.rs
wasm-size/: Cargo.toml
wasm-size/src/: lib.rs
