[workspace]
resolver = "2"

members = [
    "talc",
    "benchmarks",
    "fuzz",
    "stable_examples",
    "wasm-perf",
    "wasm-size",
]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.package.wasm-size]
opt-level = "z"

# be realistic about the optimization configuration, even if it's a benchmark
[profile.release.package.wasm-perf]
opt-level = "z"
