[workspace]
resolver = "2"

members = [
    "talc",
    "benchmarks",
    "fuzz",
    "stable_examples",
    "wasm-perf",
    "wasm-size",
]

[profile.release]
panic = "abort"

[profile.release.package.wasm-size]
opt-level = "z"
codegen-units = 1

# be realistic about the optimization configuration, even if it's a benchmark
[profile.release.package.wasm-perf]
opt-level = "z"
codegen-units = 1

# the fuzzer needs debuginfo
[profile.release.package.talc-fuzz]
debug = 1

