[workspace]
resolver = "2"
default-members = ["talc"]

members = [
    "benches",
    "fuzz",
    "talc",
    "wasm-perf",
    "wasm-size",
]

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
# panic for "bench" and "test" are automatically "unwind"

[profile.release.package.wasm-size]
opt-level = "z"
codegen-units = 1

# be realistic about the optimization configuration, even if it's a benchmark
[profile.release.package.wasm-perf]
opt-level = "z"
codegen-units = 1

# the fuzzer needs debuginfo
[profile.release.package.talc-fuzz]
debug = 1

