[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "microbench"
path = "microbench.rs"
test = false
doc = false

[[bin]]
name = "random_actions"
path = "random_actions.rs"
test = false
doc = false

[dependencies]
fastrand = "1.9"
spin = { version = "0.9.8", default-features = false, features = ["lock_api", "spin_mutex"] }
talc = { path = "../talc" }
linked_list_allocator = { version = "0.10", features =  ["use_spin_nightly", "const_mut_refs", "alloc_ref"] }
good_memory_allocator = { version = "0.1", features = ["spin", "allocator"] }
buddy-alloc = "0.5"
dlmalloc = { version = "0.2.4", default-features = false, features = ["global"] }
frusa = "0.1.2"
rlsf = "0.2.1"
