[package]
name = "talc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
spin = "0.9.8"
rand = "0.8.5"

[dependencies.talc]
path = "../talc"
features = ["error-scanning-std", "counters", "system-backed"]

[[bin]]
name = "heaps"
path = "fuzz_targets/heaps.rs"
test = false
doc = false

[[bin]]
name = "backed"
path = "fuzz_targets/backed.rs"
test = false
doc = false
