[package]
name = "talc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
rand = "0.9.3"
allocator-api2 = { version = "0.4", default-features = false, features = ["std"] }

[dependencies.talc]
path = "../talc"
features = ["error-scanning-std", "counters"]

[[bin]]
name = "manual"
path = "fuzz_targets/manual.rs"
test = false
doc = false

[[bin]]
name = "global_alloc"
path = "fuzz_targets/global_alloc.rs"
test = false
doc = false

[[bin]]
name = "allocator"
path = "fuzz_targets/allocator.rs"
test = false
doc = false
