[package]
name = "talc"
version = "5.0.0-beta"
rust-version = "1.63.0"
edition = "2021"
readme = "README.md"
authors = ["Shaun Beautement"]
description = "A fast and flexible allocator for no_std and WebAssembly"
repository = "https://github.com/SFBdragon/talc"
keywords = ["allocator", "no_std", "memory", "wasm"]
categories = ["memory-management", "no-std", "embedded", "wasm"]
license = "MIT"

[features]
default = ["system-backed"]
counters = []
system-backed = [
    "dep:libc",
    "dep:windows-sys",
]
cache-aligned-allocations = ["dep:crossbeam-utils"]
nightly = ["allocator-api2/nightly"]
disable-grow-in-place = []
disable-realloc-in-place = []
# internal, requires std
error-scanning-std = ["allocator-api2/std"]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory", "Win32_System_Threading"], optional = true }

[dependencies]
allocator-api2 = { version = "0.2", default-features = false, features = ["alloc"] }
lock_api = { version = "0.4", default-features = false }
crossbeam-utils = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
spin = { version =  "0.9", default-features = false, features = ["lock_api", "spin_mutex"] }
allocator-api2 = { version = "0.2", default-features = false, features = ["std"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
