[package]
name = "wasm-perf"
rust-version = "1.67.1"
version = "0.0.0"
authors = ["Shaun Beautement <sf.beautement@protonmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.84"
fastrand = "2.0.0"
web-sys = { version = "0.3.67", features = ["Window", "Performance"] }

[dependencies.lol_alloc]
version = "0.4.0"
optional = true

[dependencies.talc]
path = ".."
default-features = false
features = ["lock_api"]
optional = true

[features]
talc_arena = ["talc"]
dlmalloc = [] # dummy feature for wasm-bench.sh

# be realistic about the optimization configuration, even if it's a benchmark
[profile.release]
opt-level = "z"
lto = "fat"
