[package]
name = "wasm-perf"
version = "0.0.0"
authors = ["Shaun Beautement <sf.beautement@protonmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.99"
fastrand = "2.0.0"
web-sys = { version = "0.3.67", features = ["Window", "Performance"] }
spin = "0.9"

talc = { path = "../talc", optional = true }
rlsf = { version = "0.2.1", optional = true }
lol_alloc = { version = "0.4.0", optional = true }

[features]
talc_no_grow = ["talc/disable-grow-in-place"]
talc_arena_no_grow = ["talc_arena", "talc/disable-grow-in-place"]
talc_arena = ["talc"]
talc_no_realloc = ["talc/disable-realloc-in-place"]
talc_arena_no_realloc = ["talc_arena", "talc/disable-realloc-in-place"]

rlsf_small = ["rlsf"]
dlmalloc = [] # dummy feature for wasm-perf.sh
