[package]
name = "wasm-size"
rust-version = "1.68"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lol_alloc = { version = "0.4.0", optional = true }
dlmalloc = { version = "0.2.4", features = ["global"], optional = true }

[dependencies.talc]
path = ".."
default-features = false
features = ["lock_api"]
optional = true

[features]
talc_arena = ["talc"]

[profile.release]
opt-level = "z"
lto = "fat"
