[package]
name = "wasm-size"
rust-version = "1.68"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lol_alloc = { version = "0.4.0", optional = true }
dlmalloc = { version = "0.2.4", features = ["global"], optional = true }
rlsf =  { version = "0.2.1", optional = true }

[dependencies.talc]
path = "../talc"
default-features = false
features = ["lock_api"]
optional = true

[features]
talc_arena = ["talc"]
