[package]
name = "wasm-size"
version = "0.0.0"
authors = ["Shaun Beautement <sf.beautement@protonmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lol_alloc = { version = "0.4.0", optional = true }
dlmalloc = { version = "0.2.4", features = ["global"], optional = true }
rlsf =  { version = "0.2.1", optional = true }
talc = { path = "../talc", optional = true }
spin = "0.9"

[features]
talc_no_grow = ["talc/disable-grow-in-place"]
talc_arena_no_grow = ["talc_arena", "talc/disable-grow-in-place"]
talc_arena = ["talc"]
talc_no_realloc = ["talc/disable-realloc-in-place"]
talc_arena_no_realloc = ["talc_arena", "talc/disable-realloc-in-place"]

rlsf_small = ["rlsf"]
no_alloc = []